--- a/app/src/main/res/layout/activity_platform_detail.xml
+++ b/app/src/main/res/layout/activity_platform_detail.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     tools:context="com.khvatov.alex.finishedgameslist.PlatformDetailActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/platformDetailInputLayout"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/platformDetailName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/platform_edit_name" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/platformDetailSave"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/platformDetailInputLayout"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:text="@string/platform_edit_save" />
+        android:tint="@color/colorTextIcon"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-</RelativeLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/platform_edit_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/platform_edit_layout" />
+
+</android.support.design.widget.CoordinatorLayout>
